# BBM_Tins

./: .gitignore  Makefile  README.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3d27c8ac90bd_app_role_and_rls_policies.py  a1b2c3d4e5f6_platform_admins_and_refresh_tokens.py  ed36863c3869_initial_foundation.py
backend/app/: main.py  seed.py  worker.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  db.py  deps.py  logging.py  middleware.py  pagination.py  rate_limit.py  rbac.py  repository.py  security.py  tenancy.py
backend/app/domains/admins/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/audit/: models.py  service.py
backend/app/domains/auth/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/companies/: enums.py  models.py  router.py  schemas.py  service.py
backend/app/domains/platform/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/models/: base.py
backend/app/providers/email/: acs.py  factory.py  smtp.py
backend/app/providers/ocr/: base.py  factory.py  local.py
backend/app/providers/queue/: arq_redis.py  azure_service_bus.py
backend/tests/: conftest.py  test_health.py
backend/tests/integration/: conftest.py  test_auth_company_flow.py  test_rls_isolation.py
backend/tests/unit/: test_login_throttle.py  test_rbac.py  test_security.py  test_tenancy.py
backend/tin_portal_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: Dockerfile  (+5 more)
(+52 files in other folders)
