[project]
name = "tin-portal-backend"
version = "0.0.0"
description = "TIN Collection Portal — FastAPI backend (modular monolith)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "arq>=0.26",
    "redis>=5.2",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["build", ".venv", "alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Pydantic v2 generic models still use Generic[T]; PEP 695 type-params are not
# fully supported there yet, so keep the explicit Generic subclass.
ignore = ["UP046"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
